...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Sign up-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Inventory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BdF-wW-8xJ">
                                <rect key="frame" x="0.0" y="675" width="46" height="30"/>
...
                                    </mask>
                                </variation>
                            </pickerView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vbW-e7-M8z">
                                <rect key="frame" x="75" y="269" width="265" height="34"/>
                                <color key="backgroundColor" systemColor="systemGray2Color"/>
                                <accessibility key="accessibilityConfiguration" hint="Enter Name" identifier="addShortDescription"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="378" id="5Un-qI-d83">
                                        <variation key="heightClass=regular-widthClass=compact" constant="366"/>
                                    </constraint>
                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="265" id="8Mf-uW-Ye5"/>
                                    <constraint firstAttribute="width" constant="265" id="J9w-h4-4X3"/>
...
                                    </mask>
                                </variation>
                            </textField>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="NdY-JS-0ko">
                                <rect key="frame" x="75" y="332" width="265" height="120"/>
                                <color key="backgroundColor" systemColor="systemGray2Color"/>
                                <accessibility key="accessibilityConfiguration" hint="Enter Address" identifier="addLongDescription"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="265" id="4cf-A4-BVz"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="265" id="8HN-bd-MPz"/>
                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="120" id="Bv2-ZZ-pce"/>
                                    <constraint firstAttribute="height" constant="120" id="UFs-YC-q49"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="120" id="VB2-I8-2Yc"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oIz-C4-QMc">
                                <rect key="frame" x="82" y="244" width="239" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="systemGray2Color"/>
                                <accessibility key="accessibilityConfiguration" identifier="editShortDescription"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="M02-b4-jit">
                                <rect key="frame" x="81" y="304" width="240" height="128"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="qeC-JW-DLc"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" id="8Bo-ej-1ix"/>
                    <connections>
                        <outlet property="editLongDescription" destination="M02-b4-jit" id="KjC-pl-QKv"/>
                        <outlet property="editShortDescription" destination="oIz-C4-QMc" id="Tnm-Mx-Erx"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bUN-Rj-0xQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="844.92753623188412" y="940.76086956521749"/>
...
